Check more carefully for getaddrinfo().  Accept those that require <netdb.h> to be included (e.g., Tru64).  Reject those that fail a very basic operational test (e.g., AIX).
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60899 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -757,7 +757,7 @@ APR_CHECK_GETHOSTBYNAME_NAS
 echo $ac_n "${nl}Checking for IPv6 Networking support...${nl}"
 dnl # Start of checking for IPv6 support...
 AC_SEARCH_LIBS(getaddrinfo, inet6)
-AC_CHECK_FUNCS(getaddrinfo)
+APR_CHECK_WORKING_GETADDRINFO
 AC_CHECK_FUNCS(getipnodebyname)
 AC_CHECK_FUNCS(getipnodebyaddr)
 APR_CHECK_SOCKADDR_IN6
