Fix the APR_HAVE_UNISTD_H symbol.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60901 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -320,6 +320,7 @@ AC_SUBST(stdioh)
 AC_SUBST(sys_socketh)
 AC_SUBST(sys_typesh)
 AC_SUBST(sys_uioh)
+AC_SUBST(unistdh)
 AC_SUBST(signalh)
 AC_SUBST(sys_waith)
 AC_SUBST(pthreadh)
