Move apr_private.h.in from the include directory to the arch/unix directory.  This removes all temptation to include apr_private.h from outside of APR, because it just isn't available.  This also highlighted a bunch of holes in our header file setup.  Basically, just directories that were never migrated to the curret setup. Submitted by:	Will Rowe and Ryan Bloom
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60919 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -4,7 +4,7 @@ dnl ##
 
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(apr_common.m4)
-AC_CONFIG_HEADER(include/apr_private.h)
+AC_CONFIG_HEADER(include/arch/unix/apr_private.h)
 AC_CONFIG_AUX_DIR(helpers)
 
 AC_CANONICAL_SYSTEM
@@ -801,7 +801,7 @@ if test -n "$CPPFLAGS"; then
   CFLAGS="$CFLAGS $CPPFLAGS"
 fi
 
-SAVE_FILES="include/apr.h include/apr_private.h"
+SAVE_FILES="include/apr.h include/arch/unix/apr_private.h"
 
 for i in $SAVE_FILES; do
   test -r $i && mv $i $i.save
