--- a/mmap/unix/Makefile.in
+++ b/mmap/unix/Makefile.in
@@ -4,8 +4,9 @@ RANLIB=@RANLIB@
 CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
+DEFOSDIR=$(INCDIR)/arch/@DEFAULT_OSDIR@
 INCDIR=../../include
-INCLUDES=-I$(INCDIR) -I$(INCDIR)/arch
+INCLUDES=-I$(INCDIR) -I$(DEFOSDIR)
 MKDEP=../../helpers/mkdep.sh
 
 LIB=libmmap.a
