--- a/passwd/Makefile.in
+++ b/passwd/Makefile.in
@@ -6,7 +6,8 @@ CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../include
-INCLUDES=-I$(INCDIR)
+DEFOSDIR=$(INCDIR)/arch/@DEFAULT_OSDIR@
+INCLUDES=-I$(INCDIR) -I$(DEFOSDIR)
 MKDEP=../helpers/mkdep.sh
 
 OBJS=apr_md5.o \
