--- a/strings/Makefile.in
+++ b/strings/Makefile.in
@@ -5,8 +5,9 @@ RM=@RM@
 CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
+DEFOSDIR=$(INCDIR)/arch/@DEFAULT_OSDIR@
 INCDIR=../include
-INCLUDES=-I$(INCDIR)
+INCLUDES=-I$(INCDIR) -I$(DEFOSDIR)
 MKDEP=../helpers/mkdep.sh
 
 OBJS=apr_cpystrn.o \
