--- a/user/unix/Makefile.in
+++ b/user/unix/Makefile.in
@@ -5,7 +5,8 @@ CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../../include
-INCLUDES=-I$(INCDIR) -I$(INCDIR)/arch
+DEFOSDIR=$(INCDIR)/arch/@DEFAULT_OSDIR@
+INCLUDES=-I$(INCDIR) -I$(DEFOSDIR)
 MKDEP=../../helpers/mkdep.sh
 
 OBJS=homedir.o
