Fix lib directory build on non-unix platforms after moving apr_private.h into include/arch/unix
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60921 13f79535-47bb-0310-9956-ffa450edef68

--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -6,7 +6,9 @@ CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../include
-INCLUDES=-I$(INCDIR) -I$(INCDIR)/arch/@OSDIR@
+OSDIR=$(INCDIR)/arch/@OSDIR@
+DEFOSDIR=$(INCDIR)/arch/@DEFAULT_OSDIR@
+INCLUDES=-I$(INCDIR) -I$(OSDIR) -I$(DEFOSDIR)
 MKDEP=../helpers/mkdep.sh
 
 OBJS=apr_pools.o
