--- a/Makefile.in
+++ b/Makefile.in
@@ -107,7 +107,7 @@ install: all
 
 delete-exports:
 	@if test -f $(TARGET_EXPORTS); then \
-	    headers="`find include/*.h -maxdepth 0 -newer $(TARGET_EXPORTS)`" ; \
+	    headers="`find include/*.h -newer $(TARGET_EXPORTS)`" ; \
 	    if test -n "$$headers"; then \
 		echo Found newer headers. Will rebuild $(TARGET_EXPORTS). ; \
 		echo $(RM) -f $(TARGET_EXPORTS) ; \
