Fix VPATH support.  APR builds now cleanly in a separate build directory.
Submitted by:	Mo DeJong <mdejong@cygnus.com>


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60956 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -116,10 +116,18 @@ delete-exports:
 	fi
 
 $(TARGET_EXPORTS):
-	perl ./helpers/make_export.pl -o $@ include/*.h
+	if test -z "$(srcdir)"; then \
+		perl $(srcdir)helpers/make_export.pl -o $@ include/*.h; \
+	else \
+		perl $(srcdir)helpers/make_export.pl -o $@ include/*.h $(srcdir)include/*.h; \
+	fi
 
 docs:
-	./helpers/scandoc -i./helpers/default.pl -p./docs/ ./include/*.h
+	if test -z "$(srcdir)"; then \
+		$(srcdir)helpers/scandoc -i$(srcdir)helpers/default.pl -p./docs/ ./include/*.h; \
+	else \
+		$(srcdir)helpers/scandoc -i$(srcdir)helpers/default.pl -p./docs/ ./include/*.h $(srcdir)include/*.h; \
+	fi
 
 test: $(LIBAPR)
 	(cd test; make clean; make; \
