Drop the Perl dependency and use an awk script for creating apr.exports.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60963 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -44,6 +44,7 @@ dnl # Checks for programs.
 AC_PROG_CC
 AC_PROG_RANLIB_NC
 AC_PROG_MAKE_SET
+AC_PROG_AWK
 AC_CHECK_PROG(RM, rm, rm)
 AC_CHECK_TOOL(AR, ar, ar)
 
