--- a/Makefile.in
+++ b/Makefile.in
@@ -10,6 +10,7 @@ SHELL=@SH@
 MFLAGS_STATIC=
 RM=@RM@
 CC=@CC@
+AWK=@AWK@
 CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
@@ -117,9 +118,9 @@ delete-exports:
 
 $(TARGET_EXPORTS):
 	if test -z "$(srcdir)"; then \
-		perl $(srcdir)helpers/make_export.pl -o $@ include/*.h; \
+		$(AWK) -f $(srcdir)helpers/make_export.awk include/*.h > $@ ; \
 	else \
-		perl $(srcdir)helpers/make_export.pl -o $@ include/*.h $(srcdir)include/*.h; \
+		$(AWK) -f $(srcdir)helpers/make_export.awk include/*.h $(srcdir)include/*.h > $@ ; \
 	fi
 
 docs:
