--- a/configure.in
+++ b/configure.in
@@ -485,9 +485,12 @@ AC_ARG_ENABLE(dso,
     if test "$tempdso" = "no"; then
       AC_CHECK_FUNCS(dlopen, [ tempdso="yes" ], [ tempdso="no" ])
     fi
-     if test "$tempdso" = "no"; then
-        AC_CHECK_LIB(root, load_image, tempdso="yes", tempdso="no")
+    if test "$tempdso" = "no"; then
+      AC_CHECK_LIB(root, load_image, tempdso="yes", tempdso="no")
     fi
+    if test "$tempdso" = "no"; then
+      AC_CHECK_LIB(dld, shl_load, [ tempdso="yes" LIBS="$LIBS -ldld" ],
+                   tempdso="no")
     if test "$tempdso" = "no"; then
         case $OS in
             *os390|*-os2*)
