Instead of a private AP_CHARSET_EBCDIC which is only defined on an EBCDIC machine, define APR_CHARSET_EBCDIC to 0 or 1 for all the world to see and use it as appropriate in APR.
I removed the TPF and BS2000 stuff.  If configure doesn't work there
they need to provide a custom apr.h anyway.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60972 13f79535-47bb-0310-9956-ffa450edef68

--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -116,6 +116,10 @@
  */
 #define APR_INADDR_NONE           @apr_inaddr_none@
 
+/* This macro indicates whether or not EBCDIC is the native character set.
+ */
+#define APR_CHARSET_EBCDIC        @apr_charset_ebcdic@
+
 /* Typedefs that APR needs. */
 
 typedef  @short_value@           apr_int16_t;
