--- a/configure.in
+++ b/configure.in
@@ -262,7 +262,7 @@ AC_CHECK_HEADERS(dirent.h, direnth="1", dirent="0")
 AC_CHECK_HEADERS(errno.h, errnoh="1", errnoh="0")
 AC_CHECK_HEADERS(net/errno.h)
 AC_CHECK_HEADERS(fcntl.h, fcntlh="1", fcntl="0")
-AC_CHECK_HEADERS(io.h)
+AC_CHECK_HEADERS(io.h, ioh="1", ioh="0")
 AC_CHECK_HEADERS(limits.h)
 AC_CHECK_HEADERS(malloc.h)
 AC_CHECK_HEADERS(memory.h)
@@ -312,9 +312,11 @@ AC_CHECK_HEADERS(dl.h)
 AC_CHECK_HEADERS(kernel/OS.h)
 
 AC_SUBST(ctypeh)
+AC_SUBST(crypth)
 AC_SUBST(errnoh)
 AC_SUBST(direnth)
 AC_SUBST(fcntlh)
+AC_SUBST(ioh)
 AC_SUBST(netinet_inh)
 AC_SUBST(stdargh)
 AC_SUBST(stdioh)
