--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -24,10 +24,12 @@
 #define ENUM_BITFIELD(e,n,w)  e n : w
 #endif
 
+#define APR_HAVE_CRYPT_H        @crypth@
 #define APR_HAVE_CTYPE_H        @ctypeh@
 #define APR_HAVE_DIRENT_H       @direnth@
 #define APR_HAVE_ERRNO_H        @errnoh@
 #define APR_HAVE_FCNTL_H        @fcntlh@
+#define APR_HAVE_IO_H           @ioh@
 #define APR_HAVE_NETINET_IN_H   @netinet_inh@
 #define APR_HAVE_PTHREAD_H      @pthreadh@
 #define APR_HAVE_STDARG_H       @stdargh@
