Cleanups so that the support programs build cleanly.  The Win32 values need to be sanity checked. Submitted by:	Cliff Woolley <cliffwoolley@yahoo.com> Reviewed by:	Ryan Bloom
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60983 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -255,7 +255,7 @@ AC_HEADER_STDC
 
 AC_CHECK_HEADERS(ByteOrder.h)
 AC_CHECK_HEADERS(conio.h)
-AC_CHECK_HEADERS(crypt.h)
+AC_CHECK_HEADERS(crypt.h, crypth="1", crypth="0")
 AC_CHECK_HEADERS(ctype.h, ctypeh="1", ctypeh="0")
 AC_CHECK_HEADERS(dir.h)
 AC_CHECK_HEADERS(dirent.h, direnth="1", dirent="0")
@@ -274,9 +274,9 @@ AC_CHECK_HEADERS(sys/sem.h)
 AC_CHECK_HEADERS(signal.h, signalh="1", signalh="0")
 AC_CHECK_HEADERS(stdarg.h, stdargh="1", stdargh="0")
 AC_CHECK_HEADERS(stddef.h)
-AC_CHECK_HEADERS(stdio.h, stdioh="1", stdioh"0")
-AC_CHECK_HEADERS(stdlib.h)
-AC_CHECK_HEADERS(string.h)
+AC_CHECK_HEADERS(stdio.h, stdioh="1", stdioh="0")
+AC_CHECK_HEADERS(stdlib.h, stdlibh="1", stdlibh="0")
+AC_CHECK_HEADERS(string.h, stringh="1", stringh="0")
 AC_CHECK_HEADERS(strings.h)
 AC_CHECK_HEADERS(sysapi.h)
 AC_CHECK_HEADERS(sysgtime.h)
@@ -290,7 +290,7 @@ AC_CHECK_HEADERS(unistd.h, unistdh="1", unistdh="0")
 AC_CHECK_HEADERS(poll.h)
 AC_CHECK_HEADERS(sys/poll.h)
 AC_CHECK_HEADERS(unix.h)
-AC_CHECK_HEADERS(arpa/inet.h)
+AC_CHECK_HEADERS(arpa/inet.h, arpa_ineth="1", arpa_ineth="0")
 AC_CHECK_HEADERS(netinet/in.h, netinet_inh="1", netinet_inh="0")
 AC_CHECK_HEADERS(netinet/tcp.h)
 AC_CHECK_HEADERS(iconv.h)
@@ -301,7 +301,7 @@ AC_CHECK_HEADERS(sys/mman.h)
 AC_CHECK_HEADERS(sys/resource.h)
 AC_CHECK_HEADERS(sys/select.h)
 AC_CHECK_HEADERS(sys/sendfile.h)
-AC_CHECK_HEADERS(sys/signal.h)
+AC_CHECK_HEADERS(sys/signal.h, sys_signalh="1", sys_signalh="0")
 AC_CHECK_HEADERS(sys/socket.h, sys_socketh="1", sys_socketh="0")
 AC_CHECK_HEADERS(sys/stat.h)
 AC_CHECK_HEADERS(sys/types.h, sys_typesh="1", sys_typesh="0")
@@ -311,15 +311,20 @@ AC_CHECK_HEADERS(dl.h)
 
 AC_CHECK_HEADERS(kernel/OS.h)
 
+AC_SUBST(arpa_ineth)
 AC_SUBST(ctypeh)
 AC_SUBST(crypth)
 AC_SUBST(errnoh)
 AC_SUBST(direnth)
 AC_SUBST(fcntlh)
 AC_SUBST(ioh)
+AC_SUBST(netdbh)
 AC_SUBST(netinet_inh)
 AC_SUBST(stdargh)
 AC_SUBST(stdioh)
+AC_SUBST(stdlibh)
+AC_SUBST(stringh)
+AC_SUBST(sys_signalh)
 AC_SUBST(sys_socketh)
 AC_SUBST(sys_typesh)
 AC_SUBST(sys_uioh)
