These two patches for apr and apr-util fix compile warnings on Solaris for str* and mem* functions. This fixes all of them. APR_HAVE_STRINGS_H is now defined in apr.h. Submitted by:	Dale Ghent <daleg@elemental.org> Reviewed by:	Jeff Trawick
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60987 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -277,7 +277,7 @@ AC_CHECK_HEADERS(stddef.h)
 AC_CHECK_HEADERS(stdio.h, stdioh="1", stdioh="0")
 AC_CHECK_HEADERS(stdlib.h, stdlibh="1", stdlibh="0")
 AC_CHECK_HEADERS(string.h, stringh="1", stringh="0")
-AC_CHECK_HEADERS(strings.h)
+AC_CHECK_HEADERS(strings.h, stringsh="1", stringsh="0")
 AC_CHECK_HEADERS(sysapi.h)
 AC_CHECK_HEADERS(sysgtime.h)
 AC_CHECK_HEADERS(termios.h)
@@ -324,6 +324,7 @@ AC_SUBST(stdargh)
 AC_SUBST(stdioh)
 AC_SUBST(stdlibh)
 AC_SUBST(stringh)
+AC_SUBST(stringsh)
 AC_SUBST(sys_signalh)
 AC_SUBST(sys_socketh)
 AC_SUBST(sys_typesh)
