--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -38,6 +38,7 @@
 #define APR_HAVE_STDIO_H        @stdioh@
 #define APR_HAVE_STDLIB_H       @stdlibh@
 #define APR_HAVE_STRING_H       @stringh@
+#define APR_HAVE_STRINGS_H      @stringsh@
 #define APR_HAVE_SYS_SIGNAL_H   @sys_signalh@
 #define APR_HAVE_SYS_SOCKET_H   @sys_socketh@
 #define APR_HAVE_SYS_TYPES_H    @sys_typesh@
