Compensate for missing getpwnam_r on FreeBSD 3.2.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60992 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -600,6 +600,9 @@ AC_SUBST(sendfile)
 
 AC_CHECK_FUNCS(poll)
 
+dnl #----------------------------- Checking for missing POSIX thread functions
+AC_CHECK_FUNCS(getpwnam_r)
+
 dnl #----------------------------- Checking for Processes
 echo $ac_n "${nl}Checking for Processes...${nl}"
 
