I managed to miss these from a commit a while ago and so this hasn't been working on BeOS for a while.  Oh well, here is the fix.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60993 13f79535-47bb-0310-9956-ffa450edef68

--- a/shmem/unix/mm/configure.in
+++ b/shmem/unix/mm/configure.in
@@ -89,6 +89,7 @@ dnl #   some special defines for brain dead platforms
 case $PLATFORM in
    *-*-sunos* ) AC_DEFINE(MM_OS_SUNOS)  ;;
    BS2000-*-* ) AC_DEFINE(MM_OS_BS2000) ;;
+   *-*-beos*  ) AC_DEFINE(MM_OS_BEOS) ;;
 esac
 
 dnl #
