prevent duplicate exports. when srcdir is "." (or an absolute path to that same dir), then two copies of the include headers were processed. Instead, just process the true source dir, rather than those source headers *and* the headers created during the config/build.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60994 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -118,16 +118,16 @@ delete-exports:
 
 $(TARGET_EXPORTS):
 	if test -z "$(srcdir)"; then \
-		$(AWK) -f $(srcdir)helpers/make_export.awk include/*.h > $@ ; \
+		$(AWK) -f helpers/make_export.awk include/*.h > $@ ; \
 	else \
-		$(AWK) -f $(srcdir)helpers/make_export.awk include/*.h $(srcdir)include/*.h > $@ ; \
+		$(AWK) -f $(srcdir)helpers/make_export.awk $(srcdir)include/*.h > $@ ; \
 	fi
 
 docs:
 	if test -z "$(srcdir)"; then \
-		$(srcdir)helpers/scandoc -i$(srcdir)helpers/default.pl -p./docs/ ./include/*.h; \
+		helpers/scandoc -ihelpers/default.pl -p./docs/ ./include/*.h; \
 	else \
-		$(srcdir)helpers/scandoc -i$(srcdir)helpers/default.pl -p./docs/ ./include/*.h $(srcdir)include/*.h; \
+		$(srcdir)helpers/scandoc -i$(srcdir)helpers/default.pl -p./docs/ $(srcdir)include/*.h; \
 	fi
 
 test: $(LIBAPR)
