--- a/configure.in
+++ b/configure.in
@@ -588,7 +588,7 @@ dnl systems if we are also using threads.
 orig_sendfile=$sendfile
 case "$OS" in
     *freebsd*)
-        if test `echo "$OS" | sed -e 's/.*\(.\)\.\(.\)/\1\2/'` -le "41"; then
+        if test `uname -r | sed -e 's/\(.\)\.\(.\)\..*/\1\2/'` -le "41"; then
             if test "$threads" = "1"; then
                 sendfile="0"
             fi
@@ -787,6 +787,21 @@ AC_SUBST(file_as_socket)
 APR_CHECK_SOCKADDR_SA_LEN
 
 APR_CHECK_GETHOSTBYNAME_NAS
+
+dnl # Look for a way of corking TCP...
+AC_CHECK_DEFINE(TCP_CORK, netinet/tcp.h)
+AC_CHECK_DEFINE(TCP_NOPUSH, netinet/tcp.h)
+apr_tcp_nopush_flag="0"
+if test "x$ac_cv_define_TCP_CORK" = "xyes"; then
+    apr_tcp_nopush_flag="TCP_CORK"
+    have_corkable_tcp="1"
+fi
+if test "x$ac_cv_define_TCP_NOPUSH" = "xyes"; then
+    apr_tcp_nopush_flag="TCP_NOPUSH"
+    have_corkable_tcp="1"
+fi
+AC_SUBST(apr_tcp_nopush_flag)
+AC_SUBST(have_corkable_tcp)
 
 echo $ac_n "${nl}Checking for IPv6 Networking support...${nl}"
 dnl # Start of checking for IPv6 support...
