--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -86,7 +86,7 @@
 #define APR_HAVE_MEMMOVE        @have_memmove@
 #define APR_HAVE_BZERO          @have_bzero@
 #define APR_HAVE_IPV6           @have_ipv6@
-
+#define APR_HAVE_CORKABLE_TCP   @have_corkable_tcp@ 
 
 #if APR_HAVE_SYS_TYPES_H
 #include <sys/types.h>
@@ -127,6 +127,11 @@
 /* This macro indicates whether or not EBCDIC is the native character set.
  */
 #define APR_CHARSET_EBCDIC        @apr_charset_ebcdic@
+
+/* If we have a TCP implementation that can be "corked", what flag
+ * do we use?
+ */
+#define APR_TCP_NOPUSH_FLAG       @apr_tcp_nopush_flag@
 
 /* Typedefs that APR needs. */
 
