We need to initialize have_corkable_tcp to 0, otherwise on platforms that can't cork, we get a syntax error when we check #if HAVE_CORKABLE_TCP, because HAVE_CORKABLE_TCP is empty
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61017 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -792,6 +792,7 @@ dnl # Look for a way of corking TCP...
 AC_CHECK_DEFINE(TCP_CORK, netinet/tcp.h)
 AC_CHECK_DEFINE(TCP_NOPUSH, netinet/tcp.h)
 apr_tcp_nopush_flag="0"
+have_corkable_tcp="0"
 if test "x$ac_cv_define_TCP_CORK" = "xyes"; then
     apr_tcp_nopush_flag="TCP_CORK"
     have_corkable_tcp="1"
