Some Linux's do not define TCP_CORK.  This allows us to use sendfile on those platforms.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61020 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -796,6 +796,15 @@ have_corkable_tcp="0"
 if test "x$ac_cv_define_TCP_CORK" = "xyes"; then
     apr_tcp_nopush_flag="TCP_CORK"
     have_corkable_tcp="1"
+else
+    case $OS in
+        *linux*)
+            apr_tcp_nopush_flag="3"
+            have_corkable_tcp="1"
+            ;;
+        *)
+            ;;
+    esac
 fi
 if test "x$ac_cv_define_TCP_NOPUSH" = "xyes"; then
     apr_tcp_nopush_flag="TCP_NOPUSH"
