Simplify the logic for TCP cork on Linux.  Basically, instead of grepping through the system header files, trying to find TCP_CORK, we just check if sendfile was found.  If so, but we couldn't find TCP_CORK, we define it ourselves.  This is the same logic that the C files used to use, so it should be much more stable. Submitted by:	Jeff Trawick <trawickj@bellsouth.net>
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@61025 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -799,10 +799,10 @@ if test "x$ac_cv_define_TCP_CORK" = "xyes"; then
 else
     case $OS in
         *linux*)
-            AC_EGREP_HEADER(TCP_CORK, linux/socket.h, [
-            apr_tcp_nopush_flag="3"
-            have_corkable_tcp="1"
-            ])
+            if test "x$sendfile" = "x1"; then
+                apr_tcp_nopush_flag="3"
+                have_corkable_tcp="1"
+            fi
             ;;
         *)
             ;;
