--- a/configure.in
+++ b/configure.in
@@ -799,10 +799,15 @@ if test "x$ac_cv_define_TCP_CORK" = "xyes"; then
 else
     case $OS in
         *linux*)
-            if test "x$sendfile" = "x1"; then
+            AC_EGREP_CPP(yes,[
+                #include <linux/socket.h>
+                #ifdef TCP_CORK
+                yes
+                #endif
+            ],[
                 apr_tcp_nopush_flag="3"
                 have_corkable_tcp="1"
-            fi
+            ])
             ;;
         *)
             ;;
